--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
-<h1>Welcome to aifeer.com!</h1>
+<h1>Welcome to emiqi.com! sale ... wechat:wyang8080</h1>
 <p>If you see this page, the emiqi web server is successfully installed and
 working. Further configuration is required.</p>
 
