--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </style>
 </head>
 <body>
-<h1>Welcome to emiqi.com! sale ... wechat:wyang8080</h1>
+<h1>Welcome to emiqi.com / aifeer.com ! sale ... wechat:wyang8080</h1>
 <p>If you see this page, the emiqi web server is successfully installed and
 working. Further configuration is required.</p>
 
 <p>For online documentation and support please refer to
 <a href="https://emiqi.com/">emiqi.com</a>.<br/>
+  <a href="https://aifeer.com/">aifeer.com</a>.<br/>
 Commercial support is available at
 <a href="https://www.emiqi.com/">www.emiqi.com</a>.</p>
-
-<p><em>Thank you for using aifeer.com</em></p>
+<a href="https://www.aifeer.com/">www.aifeer.com</a>.</p>
+<p><em>Thank you for using emiqi.com / aifeer.com</em></p>
 </body>
 </html>
